--- a/api-catalog.yml
+++ b/api-catalog.yml
@@ -2,7 +2,7 @@ server:
   port: ${PORT:${SERVER_PORT:0}}
 spring:
   application:
-    name: api-catalog
+    name: catalog-service
   datasource:
     driverClassName: com.mysql.jdbc.Driver
     url: jdbc:mysql://localhost:3306/catalog-dev
