--- a/api-catalog.yml
+++ b/api-catalog.yml
@@ -5,7 +5,7 @@ spring:
     name: catalog-service
   datasource:
     driverClassName: com.mysql.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/catalog-dev
+    url: jdbc:mysql://localhost:3306/movie-dev
     username: root
     password: Pepa3100%
   jpa:
