--- a/api-gateway.yml
+++ b/api-gateway.yml
@@ -18,6 +18,10 @@ spring:
           uri: lb://catalog-service
           predicates:
             - Path=/api/v1/catalog/**
+        - id: msserie
+          uri: lb://api-service
+          predicates:
+            - Path=/api/v1/series/**
 
 info:
   app:
